# lite-agents

./: .gitignore  README.md  pyproject.toml  test.py
data/: ingested_chunks.json
data/chroma_db/: chroma.sqlite3
data/company_policies/: POL-01-hr-ferie.md  POL-02-lavoro-da-remoto.md  POL-03-spese-note-spese.md  POL-04-viaggi-di-lavoro.md  POL-05-acquisti-fornitori.md
examples/: rag.md
lite_agents/agent/: __init__.py  _base.py  agent.py  chief.py  memory.py  orchestrator.py  rag.py
lite_agents/core/: __init__.py  chunk.py  message.py  response.py  tool.py
lite_agents/db/: __init__.py  chroma.py  db.py  ingestion.py
lite_agents/ingestion/: __init__.py
lite_agents/llm/: __init__.py  lite.py
lite_agents/logger/: __init__.py
lite_agents/prompt/: __init__.py
lite_agents/prompts/: __init__.py  chief.py  ingestion.py  memory.py  rag.py
lite_agents/readers/: __init__.py  base.py  markdown.py  registry.py
lite_agents/tools/: date.py
lite_agents/utils/: parse.py
notebooks/: ingested_chunks.json  ingestion.ipynb
