[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-agents"
version = "0.1.0"
description = "A lightweight agent framework using lite-llm"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "streamlit",
    "strenum>=0.4.15",
]

[project.urls]
Homepage = "https://github.com/riccardomusmeci/lite-agents"

[tool.setuptools.packages.find]
include = ["lite_agents*"]
